--- a/src/components/Chatroom/ChatSection/chatsection.css
+++ b/src/components/Chatroom/ChatSection/chatsection.css
@@ -32,7 +32,7 @@
 .Messages-container {
   padding-top: 20px;
   width: 100%;
-  min-height: 80%;
+  height: calc(100% - 80px);
   overflow-y: scroll;
   padding-bottom: 20px;
 }
