--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -6,7 +6,7 @@
 .chatroom-subtitle {
   font-size: 24px;
   font-weight: 600;
-  letter-spacing: -.04em;
+  letter-spacing: -0.04em;
   line-height: 28px;
   text-transform: none;
 }
@@ -17,15 +17,16 @@
   margin: 1rem 0rem;
   padding-bottom: 60px;
 }
-.home::-webkit-scrollbar {
+
+*::-webkit-scrollbar {
   width: 3px;
 }
 
-.home::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.home::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #000;
   outline: 1px solid #000;
 }
